5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1745_1531.log
== SUBMITION (2019-05-15 14:16:43) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2

while(i < k):
	cont = 1 *(-1)**i *ang**c / factorial(c)
	c = c + 2
	i = i + 1
print(i)
-- EXECUTION TIME:
0.203629
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
6
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
20
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:16:44) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2

while(i < k):
	cont = 1 *(-1)**i *ang**c / factorial(c)
	c = c + 2
	i = i + 1
print(i)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:17:01) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2

while(i < k):
	cont = 1 *(-1)**i *ang**c / factorial(c)
	c = c + 2
	i = i + 1
print(i)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:12) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2

while(i < k):
	cont = cont + 1 * (-1)**i * ang**c / factorial(c)
	c = c + 2
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    cont = cont + 1 * (-1)**i * ang**c / factorial(c)
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:09) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = 1

while(i < k):
	cont = cont + 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cont = cont + 1 * aux * (ang**c / factorial(c))
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:25:26) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = 1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(i)
-- EXECUTION TIME:
0.164789
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
6
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
20
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:27) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = 1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(i)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:25:27) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = 1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(i)
-- EXECUTION TIME:
0.144499
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
6
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
6
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:25:27) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = 1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(i)
-- EXECUTION TIME:
0.157458
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
6
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
Insira o angulo: Quant. dos termos: 20
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
Insira o angulo: Quant. dos termos: 9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:41) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = -1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(i)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:05) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = -1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(i, 10)
-- ERROR:
File "XXXX", line 18
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:07) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = -1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(i, 10)
-- ERROR:
File "XXXX", line 18
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:08) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
c = 2
aux = -1

while(i < k):
	cont = 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(i, 10)
-- ERROR:
File "XXXX", line 18
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:21) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 2
aux = -1

while(i < k):
	cont = cont * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:50) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 2
aux = -1

while(i < k):
	cont = cont + (aux * ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:01) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 2
aux = -1

while(i < k):
	cont = cont + (aux * ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:29) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 2
aux = -1

while(i < k):
	cont = cont * (aux * ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:50) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 2
aux = -1

while(i > k):
	cont = cont * (aux * ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:16) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 2
aux = -1

while(i > k):
	cont = cont + 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:22) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 2
aux = -1

while(i > k):
	cont = cont + 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:03:24) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 2
aux = -1

while(i > k):
	cont = cont + 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- EXECUTION TIME:
1.56322
-- ERROR:
  File "/home/codebench/codes/1745/1531/main.py", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:43) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = -1

while(i > k):
	cont = cont + 1 * aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:53) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 18
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:23) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 18
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:23) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 18
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:24) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 18
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:24) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 18
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:10:28) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- EXECUTION TIME:
1.46792
-- ERROR:
  File "/home/codebench/codes/1745/1531/main.py", line 18
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:10:29) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10)
-- EXECUTION TIME:
2.55988
-- ERROR:
  File "/home/codebench/codes/1745/1531/main.py", line 18
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:28) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + (-1)**(cont + 1)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:59) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:44) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:44) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:45) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:45) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:45) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:58) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:21) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:28) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0

while(i > k):
	cont = cont + (-1)**(cont + 2)* (ang**c / factorial(c))
	c = c + 2
	i = i + 1
print(round(cont, 10))
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:22) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10))
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:42) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i > k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10))
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:57) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i < k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10))
-- OUTPUT:
1.0615446138
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:40) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
aux = 1
while(i < k):
	cont = cont + (aux * (ang**c / factorial(c)))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10))
-- OUTPUT:
1.0615446138
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:14) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 0
aux = 1
while(i < k):
	cont = cont + aux * (ang**c / factorial(c))
	c = c + 2
	i = i + 1
if(aux == 1):
	aux = -1
else:
	aux = 1
print(round(cont, 10))
-- OUTPUT:
2.0615446138
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:19) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 0

while(i < k):
	cont = cont + (-1)**i * ang**c / factorial(c)
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- OUTPUT:
1.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:53) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 0

while(i < k):
	cont = (-1)**i * ang**c / factorial(c)
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:23) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 0

while(i < k):
	cont = cont + ((-1)**i * ang**c / factorial(c))
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- OUTPUT:
1.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:19) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 0

while(i < k):
	cont = cont + ((-1)**i * (ang**c / factorial(c)))
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- OUTPUT:
1.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:32:02) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 0

while(i < k):
	cont = cont * ((-1)**i * (ang**c / factorial(c)))
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:25) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 
while(i < k):
	cont = cont + ((-1)**i * (ang**c / factorial(c)))
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- ERROR:
File "XXXX", line 7
    c = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:29) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 1
c = 0
while(i < k):
	cont = cont + ((-1)**i * (ang**c / factorial(c)))
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- OUTPUT:
1.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:48:18) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
while(i < k):
	cont = cont + ((-1)**i * (ang**c / factorial(c)))
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- OUTPUT:
0.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:48:31) 
-- CODE:
from math import*
ang = eval(input("Insira o angulo: "))
k = int(input("Quant. dos termos: "))

i = 0
cont = 0
c = 0
while(i < k):
	cont = cont + ((-1)**i * (ang**c / factorial(c)))
	c = c + 2
	i = i + 1

print(round(cont, 10))
-- EXECUTION TIME:
0.179229
-- TEST CASE 1:
---- input:
pi/9
6
---- correct output:
0.9396926208
---- user output:
0.9396926208
-- TEST CASE 2:
---- input:
pi/10
20
---- correct output:
0.9510565163
---- user output:
0.9510565163
-- TEST CASE 3:
---- input:
pi
9
---- correct output:
-0.9999998647
---- user output:
-0.9999998647
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
